# ortac

./: CHANGES.md  LICENSE  README.md  announce.md  build_pg.sh  dune-project  non-deterministic-model.md  ortac-examples.opam  ortac.opam  release.md  todo.md
.github/workflows/: main.yml
doc/: dune  example.mli  index.mld
examples/: dune  lwt_dllist_tests.ml  reproduce.ml  varray_circular_tests.ml  varray_tests.ml  varray_tests2.ml
ortac-examples/: README.md  dune  lwt_dllist_spec.ml  lwt_dllist_spec.mli  lwt_dllist_tests.ml
plugins/qcheck-stm/: TODO.md
plugins/qcheck-stm/src/: config.ml  ir.ml  ir_of_gospel.ml  ortac_qcheck_stm.ml  reserr.ml  reserr.mli  stm_of_ir.ml
plugins/qcheck-stm/src/runtime/: ortac_runtime_qcheck_stm.ml
plugins/qcheck-stm/test/: array.mli  array_stm_tests.expected.ml  conjunctive_clauses_stm_tests.expected.ml  dune  expect_ir.expected  expect_ir.ml  hashtbl_stm_tests.expected.ml  invariants_errors.expected  invariants_stm_tests.expected.ml  lib.mli  record_stm_tests.expected.ml  ref_stm_tests.expected.ml  sequence_model_stm_tests.expected.ml  test_errors.t
src/STM/: ast0.ml  ast3.ml  dune  ortac_STM.ml  phase1.ml  phase2.ml  phase3.ml
src/core/: builder.ml  builder.mli  context.ml  drv.ml  generate.ml  ocaml_of_gospel.ml  report.ml  translate.ml  translate.mli  translated.ml  translation.ml  translation.mli  utils.mli  warnings.ml
