(rule
 (copy %{lib:lwt-dllist:lwt_dllist.ml} lwt_dllist_spec.ml))

(library
 (name lwt_dllist_spec)
 (modules lwt_dllist_spec)
 (flags
  (:standard -w -69))
 (package ortac-examples))

(test
 (name lwt_dllist_tests)
 (modules lwt_dllist_tests)
 (libraries
  lwt_dllist_spec
  qcheck-stm.stm
  qcheck-stm.sequential
  ortac-runtime)
 (package ortac-examples))

(rule
 (alias runtest)
 (package ortac-examples)
 (deps lwt_dllist_tests.exe)
 (action
  (run ./%{deps} --verbose)))
